# Gram_Resources

./: .env.example  .gitignore  README.md  _main.py  main.py  pyproject.toml
.github/workflows/: update.yml
impl/: client.py  config.py  genshin.py  genshin.pyi
impl/_spiders/: ambr.py  hakush.py  nanoka.py
impl/_spiders/genshin/: ambr.py  hakush.py  honey.py  nanoka.py  other.py
impl/assets_utils/: logger.py  path.py
impl/core/: _abstract_spider.py  abstract_spider.py  file_manager.py
impl/models/: base.py  enums.py
impl/models/genshin/: artifact.py  beyond_item.py  character.py  daily_material.py  enums.py  material.py  namecard.py  other.py  weapon.py
impl/spiders/: ambr.py  hakush.py
impl/spiders/genshin/: ambr.py  hakush.py  honey.py
