[project]
name = "gram-resources"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.4",
    "black<25.0.0,>=24.10.0",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "persica",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "ujson>=5.10.0",
]

[tool.uv.sources]
persica = { git = "https://github.com/luoshuijs/Persica" }

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py311']
